--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,20 +1,30 @@
-include your HTML opening tags
-and your hidden "head" tag
-and your "title" tag
-
-
-full-width wrapper div
-  header containing: YOUR NAME's Labs For INST377
-  container div
-      left div
-        sub-header saying "albums"
-        Your top 5 albums in an ordered list
-      right div (main div for the site)
-        sub-header saying "image carousel"
-          div to contain four images
-            four images of mochi from your readings, all square (they're four different image types!)
-          div to contain a description or text
-            description of images
-
-
-full-width page footer containing your github account name and a link to your gitHub account
+<!DOCTYPE HTML>
+<html lang="en">
+  <head>
+    <title>Thomas Walz Lab 1 INST377</title>
+  </head>
+  <body>
+    <h1>Thomas Walz's Labs For INST377</h1>
+    <div class="left">
+      <h2>Album Names</h2>
+      <ol>
+        <li>Kiltro - Creatures of Habit</li>
+        <li>The Prodigy - Invaders Must Die</li>
+        <li>DM Dokuro - Terraria Calamity Mod OST</li>
+        <li>Chris Christodolou - Risk of Rain 2 OST</li>
+        <li>Bear Ghost - Blasterpiece</li>
+      </ol>
+    </div>
+    <div class="right">
+      <h2>Image Carousel</h2>
+      <img src='../lab_1/images/mochi.jpg' alt='A mochi ball in a bubble'/>
+      <img src="../lab_1/images/mochi.gif" alt='A dancing mochi ball'/>
+      <img src="../lab_1/images/mochi.png" alt='A mochi ball'/>
+      <img src="../lab_1/images/mochi.svg" alt='A mochi ball with Bézier handles'/>
+    </div>
+    <div>
+      <p>The previous images are depictions of Mochi, each in a different image format.<br> The images are in formats going from left to right as follows: .jpg, .gif, .png, and .svg.</p>
+    </div>
+    <footer>MY GITHUB ACCOUNT: twalz624 (link: <a href="https://github.com/twalz624">github.com/twalz624</a>)</footer>
+  </body>
+</html>
