--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -5,26 +5,31 @@
   </head>
   <body>
     <h1>Thomas Walz's Labs For INST377</h1>
-    <div class="left">
-      <h2>Album Names</h2>
-      <ol>
-        <li>Kiltro - Creatures of Habit</li>
-        <li>The Prodigy - Invaders Must Die</li>
-        <li>DM Dokuro - Terraria Calamity Mod OST</li>
-        <li>Chris Christodolou - Risk of Rain 2 OST</li>
-        <li>Bear Ghost - Blasterpiece</li>
-      </ol>
-    </div>
-    <div class="right">
-      <h2>Image Carousel</h2>
-      <img src='../lab_1/images/mochi.jpg' alt='A mochi ball in a bubble'/>
-      <img src="../lab_1/images/mochi.gif" alt='A dancing mochi ball'/>
-      <img src="../lab_1/images/mochi.png" alt='A mochi ball'/>
-      <img src="../lab_1/images/mochi.svg" alt='A mochi ball with Bézier handles'/>
-    </div>
     <div>
-      <p>The previous images are depictions of Mochi, each in a different image format.<br> The images are in formats going from left to right as follows: .jpg, .gif, .png, and .svg.</p>
+      <div class="left">
+        <h2>Album Names</h2>
+        <ol>
+          <li>Kiltro - Creatures of Habit</li>
+          <li>The Prodigy - Invaders Must Die</li>
+          <li>DM Dokuro - Terraria Calamity Mod OST</li>
+          <li>Chris Christodolou - Risk of Rain 2 OST</li>
+          <li>Bear Ghost - Blasterpiece</li>
+        </ol>
+      </div>
+      <div class="right">
+        <h2>Image Carousel</h2>
+          <div>
+            <img src='../lab_1/images/mochi.jpg' alt='A mochi ball in a bubble'/>
+            <img src="../lab_1/images/mochi.gif" alt='A dancing mochi ball'/>
+            <img src="../lab_1/images/mochi.png" alt='A mochi ball'/>
+            <img src="../lab_1/images/mochi.svg" alt='A mochi ball with Bézier handles'/>
+          </div>
+          <div>
+            <p>The previous images are depictions of Mochi, each in a different image format.
+              <br> The images are in formats going from left to right as follows: .jpg, .gif, .png, and .svg.</p>
+          </div>
+      </div>
     </div>
-    <footer>MY GITHUB ACCOUNT: twalz624 (link: <a href="https://github.com/twalz624">github.com/twalz624</a>)</footer>
   </body>
+  <footer>MY GITHUB ACCOUNT: twalz624 (link: <a href="https://github.com/twalz624">github.com/twalz624</a>)</footer>
 </html>
