spelling error fix

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
-  
+
   <head>
     <title>Thomas Walz Lab 1 INST377</title>
   </head>
@@ -14,7 +14,7 @@
             <li>Kiltro - Creatures of Habit</li>
             <li>The Prodigy - Invaders Must Die</li>
             <li>DM Dokuro - Terraria Calamity Mod OST</li>
-            <li>Chris Christodolou - Risk of Rain 2 OST</li>
+            <li>Chris Christodoulou - Risk of Rain 2 OST</li>
             <li>Bear Ghost - Blasterpiece</li>
           </ol>
         </div>
