--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -8,44 +8,39 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>Thomas Walz's Labs For INST377</h1>
-      <div>
-        <div class="left">
+      <div class="header">
+        <h1>Thomas Walz's Labs For INST377</h1>
+      </div>
+      <div class="container">
+        <div class="left_section box">
           <h2>Album Names</h2>
-          <ol>
-            <li>Kiltro - Creatures of Habit</li>
-            <li>The Prodigy - Invaders Must Die</li>
-            <li>DM Dokuro - Terraria Calamity Mod OST</li>
-            <li>Chris Christodoulou - Risk of Rain 2 OST</li>
-            <li>Bear Ghost - Blasterpiece</li>
-          </ol>
+          <div class="subtitle box">
+            <ol>
+                <li>Kiltro - Creatures of Habit</li>
+                <li>The Prodigy - Invaders Must Die</li>
+                <li>DM Dokuro - Terraria Calamity Mod OST</li>
+                <li>Chris Christodoulou - Risk of Rain 2 OST</li>
+                <li>Bear Ghost - Blasterpiece</li>
+              </ol>
+          </div>
         </div>
-        <div class="right">
+        <div class="right_section box">
           <h2>Image Carousel</h2>
-            <div>
+            <div class="grid">
               <img src='../lab_1/images/mochi.jpg' alt='A mochi ball in a bubble'/>
               <img src="../lab_1/images/mochi.gif" alt='A dancing mochi ball'/>
               <img src="../lab_1/images/mochi.png" alt='A mochi ball'/>
               <img src="../lab_1/images/mochi.svg" alt='A mochi ball with Bézier handles'/>
             </div>
-            <div>
-              <p>The previous images are depictions of Mochi, each in a different image format.
-                <br> The images are in formats going from left to right as follows: .jpg, .gif, .png, and .svg.</p>
+            <div class="subtitle box">
+              <p>These images are depictions of Mochi, each in a different image format. The images are in formats going from left to right as follows: <br>.jpg, .gif, .png, and .svg.</p>
             </div>
         </div>
       </div>
   </div>
-  <footer>MY GITHUB ACCOUNT: twalz624 (link: <a href="https://github.com/twalz624">github.com/twalz624</a>)</footer>
+  <div class="footer">
+    <footer>MY GITHUB ACCOUNT NAME: <a href="https://github.com/twalz624">twalz624</a></footer>
+  </div>
   </body>
 
 </html>
-Replace this with your complete HTML from Lab 1
-
-Hook it up to CSS by including style.css in the <head> tag
-
-Then add CSS class names to your HTML to make it look like the lab pictures.
-For example: <div class="selector">
-
-You should not need to edit the CSS to do this, only the HTML.
-
-Don't forget to add an actual set of image descriptions to your image carousel.
