--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -1,3 +1,62 @@
+<!DOCTYPE HTML>
+<html lang="en">
+
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Thomas Walz Lab 3 INST377</title>
+    <link rel="stylesheet" href="style.css"/>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="header">
+        <h1>Thomas Walz's Labs For INST377</h1>
+      </div>
+      <div class="container">
+        <div class="left_section box">
+          <h2>Album Names</h2>
+          <div class="subtitle box">
+            <ol>
+                <li>Kiltro - Creatures of Habit</li>
+                <li>The Prodigy - Invaders Must Die</li>
+                <li>DM Dokuro - Terraria Calamity Mod OST</li>
+                <li>Chris Christodoulou - Risk of Rain 2 OST</li>
+                <li>Bear Ghost - Blasterpiece</li>
+              </ol>
+          </div>
+        </div>
+        <div class="right_section box">
+          <h2>Image Carousel</h2>
+            <div class="carousel">
+                <button class="prev">prev</button>
+                <div class="slides">
+                    <div class="carousel_item visible">
+                        <img src='../lab_1/images/mochi.jpg' alt='A mochi ball in a bubble'/>
+                    </div>
+                    <div class="carousel_item hidden">
+                        <img src="../lab_1/images/mochi.gif" alt='A dancing mochi ball'/>
+                    </div>
+                    <div class="carousel_item hidden">
+                        <img src="../lab_1/images/mochi.png" alt='A mochi ball'/>
+                    </div>
+                    <div class="carousel_item hidden">
+                        <img src="../lab_1/images/mochi.svg" alt='A mochi ball with Bézier handles'/>
+                    </div>
+                </div>
+                <button class="next">next</button>
+            </div>
+            <div class="subtitle box">
+              <p>These images are depictions of Mochi, each in a different image format. The images are in formats going from left to right as follows: <br>.jpg, .gif, .png, and .svg.</p>
+            </div>
+        </div>
+      </div>
+    </div>
+  <div class="footer">
+    <footer>MY GITHUB ACCOUNT NAME: <a href="https://github.com/twalz624">twalz624</a></footer>
+  </div>
+  <script src="script.js"></script>
+  </body>
+
+</html>
 <!--
     Replace this with your working code from Lab 2, and include:
     - The styles in this folder's `style.css`
