Added new images
Mochi are gone, now its fantasy characters!

--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -30,16 +30,16 @@
                 <button class="prev">prev</button>
                 <div class="slides">
                     <div class="carousel_item visible">
-                        <img src='../lab_1/images/mochi.jpg' alt='A mochi ball in a bubble'/>
+                        <img src='../lab_3/images/knight.png' alt='A knight in shining armor'/>
                     </div>
                     <div class="carousel_item hidden">
-                        <img src="../lab_1/images/mochi.gif" alt='A dancing mochi ball'/>
+                        <img src="../lab_3/images/rogue.png" alt='A stealthy rogue'/>
                     </div>
                     <div class="carousel_item hidden">
-                        <img src="../lab_1/images/mochi.png" alt='A mochi ball'/>
+                        <img src="../lab_3/images/cleric.png" alt="A plague doctor. You can't tell by just looking at them, but they're a cleric."/>
                     </div>
                     <div class="carousel_item hidden">
-                        <img src="../lab_1/images/mochi.svg" alt='A mochi ball with Bézier handles'/>
+                        <img src="../lab_3/images/wizard.png" alt='A powerful wizard.'/>
                     </div>
                 </div>
                 <button class="next">next</button>
