--- a/client/tetris/index.html
+++ b/client/tetris/index.html
@@ -6,7 +6,8 @@
         <title>Basic Tetris</title>
     </head>
     <body>
-        <h3>Score:<span id="score"></span></h3>
+        <h3>Score:<span id="score">0</span></h3>
+        <button id="start-button">start/pause</button>
         <div class="grid">
             <div></div>
             <div></div>
