--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -1,3 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Thomas Walz's Lab 4</title>
+</head>
+<body>
+    <div class="header">
+        <h1>Thomas Walz's Labs for INST377</h1>
+    </div>
+    <div class="container">
+        <h3>Form Inputs</h3>
+        <form>
+            <label>Form Inputs</label>
+        </form>
+    </div>
+</body>
+</html>
 <!-- Bring in your successful HTML/CSS from the Flexbox lab -->
 <!-- Try typing 'doc' at the top of this file and pressing "tab" -->
 <!-- if your development environment is set up correctly -->
