--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -12,10 +12,20 @@
         <h1>Thomas Walz's Labs for INST377</h1>
     </div>
     <div class="container">
-        <h3>Form Inputs</h3>
-        <form>
-            <label>Form Inputs</label>
-        </form>
+        <div class="box">
+            <h2>Form Inputs</h2>
+            <form class="box">
+                <label>Restaurant Name</label>
+                <input id="resto">
+                <button class="submit">Submit</button>
+            </form>
+        </div>
+        <div class="box">
+           <h2> Local Restaurants</h2>
+           <div class="box">
+            A list of restaurants from an API
+           </div> 
+        </div>
     </div>
 </body>
 </html>
