--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -11,21 +11,26 @@
     <div class="header">
         <h1>Thomas Walz's Labs for INST377</h1>
     </div>
-    <div class="container">
-        <div class="box">
-            <h2>Form Inputs</h2>
-            <form class="box">
-                <label>Restaurant Name</label>
-                <input id="resto">
-                <button class="submit">Submit</button>
-            </form>
+    <div class="wrapper">
+        <div class="container">
+            <div class="left_section box">
+                <h2>Form Inputs</h2>
+                <form action="/api" class="box">
+                    <label>Restaurant Name</label>
+                    <input id="resto">
+                    <button class="submit">Submit</button>
+                </form>
+            </div>
+            <div class="right_section box">
+               <h2> Local Restaurants</h2>
+               <div class="box">
+                A list of restaurants from an API
+               </div> 
+            </div>
         </div>
-        <div class="box">
-           <h2> Local Restaurants</h2>
-           <div class="box">
-            A list of restaurants from an API
-           </div> 
-        </div>
+    </div>
+    <div class="footer">
+        <footer>MY GITHUB ACCOUNT NAME: <a href="https://github.com/twalz624">twalz624</a></footer>
     </div>
 </body>
 </html>
