--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -13,15 +13,15 @@
     </div>
     <div class="wrapper">
         <div class="container">
-            <div class="left_section box">
+            <div class="box">
                 <h2>Form Inputs</h2>
-                <form action="/api" class="box">
+                <form action="../../server/routes/apiRoutes.js" class="box">
                     <label>Restaurant Name</label>
                     <input id="resto">
                     <button class="submit">Submit</button>
                 </form>
             </div>
-            <div class="right_section box">
+            <div class="box right_section">
                <h2> Local Restaurants</h2>
                <div class="box">
                 A list of restaurants from an API
