--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="box left_section">
                 <h2>Form Inputs</h2>
-                <form action="/api" class="box">
+                <form action="/api" class="box main_form">
                     <label for="resto">Restaurant Name</label>
                     <input type = "text" name="resto" id="resto"/>
                     <button type="submit">Submit</button>
@@ -37,5 +37,6 @@
     <div class="footer">
         <footer>MY GITHUB ACCOUNT NAME: <a href="https://github.com/twalz624">twalz624</a></footer>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
