--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -7,3 +7,41 @@
 
     Try placing it at the same level in your element tree as your Submit button
 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Thomas Walz's Lab 4</title>
+</head>
+<body>
+    <div class="wrapper">
+        <div class="header">
+            <h1>Thomas Walz's Labs for INST377</h1>
+        </div>
+        <div class="container">
+            <div class="box left_section">
+                <h2>Form Inputs</h2>
+                <form action="/api" class="box main_form">
+                    <label for="resto">Restaurant Name</label>
+                    <input type = "text" name="resto" id="resto"/>
+                    <button type="submit">Submit</button>
+                    <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+                </form>
+            </div>
+            <div class="box right_section">
+               <h2> Local Restaurants</h2>
+               <div class="box">
+                A list of restaurants from an API
+               </div> 
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <footer>MY GITHUB ACCOUNT NAME: <a href="https://github.com/twalz624">twalz624</a></footer>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
