--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -25,10 +25,12 @@
             <div class="box left_section">
                 <h2>Form Inputs</h2>
                 <form action="/api" class="box main_form">
-                    <label for="resto">Restaurant Name</label>
-                    <input type = "text" name="resto" id="resto"/>
-                    <button type="submit">Submit</button>
+                    <div>
+                        <label for="resto">Restaurant Name</label>
+                        <input type = "text" name="resto" id="resto"/>
+                    </div>
                     <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+                    <button type="submit">Submit</button>
                 </form>
             </div>
             <div class="box right_section">
