making the html injection function
list of 15 restaurants now displays on the webpage

--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="box right_section">
                <h2> Local Restaurants</h2>
-               <div class="box">
+               <div class="box" id="restaurant_list">
                 A list of restaurants from an API
                </div> 
             </div>
