added no item name exception to filter list
also changed labels for button and filter input in html

--- a/client/lab_7/index.html
+++ b/client/lab_7/index.html
@@ -17,11 +17,11 @@
                 <h2>Form Inputs</h2>
                 <form action="/api" class="box main_form">
                     <div>
-                        <label for="resto">Restaurant Name</label>
+                        <label for="resto">Filter Restaurant List</label>
                         <input type = "text" name="resto" id="resto"/>
                     </div>
                     <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
-                    <button type="submit">Submit</button>
+                    <button type="submit">Change Restaurants</button>
                 </form>
             </div>
             <div class="box right_section">
