--- a/client/lab_8/index.html
+++ b/client/lab_8/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+    integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+    crossorigin=""/>
     <link rel="stylesheet" href="style.css">
-    <title>Thomas Walz's Lab 4</title>
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+    integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
+    crossorigin=""></script>
+    <title>Thomas Walz's Lab 8</title>
 </head>
 <body>
     <div class="wrapper">
@@ -25,7 +32,8 @@
                 </form>
             </div>
             <div class="box right_section">
-               <h2> Local Restaurants</h2>
+               <h2> Local Restaurant Map</h2>
+               <div id="map"></div>
                <div class="box" id="restaurant_list">
                 A list of restaurants from an API
                </div> 
